docker-compose: Add restart to kafka-zookeeper | NEAT policy API & Swagger | code housekeeping
